# civicai

./: .gitignore  Dockerfile  README.md  agent.py  api.py  docker-compose.yml  ingest.py  pyproject.toml
docs/: carte_residence.txt  permis_travail.txt  visa_touriste.txt
static/: index.html
